--- a/src/main/resources/static/web/css/style.css
+++ b/src/main/resources/static/web/css/style.css
@@ -34,3 +34,8 @@
     background: linear-gradient(45deg,#ee09cf,#0026ff);
     color: white;
 }
+
+.menu-logo{
+    width: 30px;
+    height: 30px;
+}
